# STM32-ESP32-Microphone-Array-Sound-Localization

./: .gitignore  DelayProcessing.m  README.md  prijave_kuce.txt  raw_sample.txt
Core/Src/: main.c  stm32g4xx_it.c
ESP32_Visualization/: CMakeLists.txt  main.c
ESP32_Visualization/components/Inc/: microphone_config.h  sound_loc_processor.h  uart_driver.h  web_server.h  wifi_manager.h
ESP32_Visualization/components/Src/: sound_loc_processor.c  task_manager.c  uart_driver.c  uart_receiver.c  uart_receiver.h  web_server.c  wifi_manager.c
MatlabHelper/: .mxproject  MatlabHelper.ioc  MatlabHelper.launch
MatlabHelper/Core/Inc/: adc_capture.h  app_config.h  main.h  uart_stream.h
MatlabHelper/Core/Src/: adc_capture.c  main.c  stm32g4xx_it.c  uart_stream.c
Sound Localization/: .cproject  .gitignore  .mxproject  .project  FUNKCIONALNOST.txt  Funkcionalnost_py.txt  Project.txt  Sound Localization Debug.cfg  Sound Localization Debug.launch  Sound Localization.ioc  Sound Localization.launch  adc_timing_interleaved.txt  prvobitni tdoa.txt  py
Sound Localization/.claude/: settings.local.json
Sound Localization/Core/Inc/: FreeRTOSConfig.h  main.h  stm32g4xx_hal_conf.h  stm32g4xx_it.h  task_manager.h
Sound Localization/Core/Src/: main.c  stm32g4xx_it.c  (+1 more)
Sound Localization/Debug/: Sound Localization.elf  Sound Localization.list  Sound Localization.map  makefile  objects.list  sources.mk
Sound Localization/Tools/: app.py  config.py  init.py  main.py  sphere_view.py  uart_reader.py  waveform_view.py
docs_build/: make_pdf.py  make_pdf_v2.py  make_pdf_v3.py
(+81 files in other folders)
